# chronos

./: .gitattributes  .gitignore  CREDITS.md  LICENSE  README.md  add_convergence.py  add_convergence2.py  add_convergence3.py  add_convergence4.py  add_convergence5.py  add_convergence6.py  expansion-planning.md
.claude/: launch.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy.yml
data/classes/: alchemist.json  hunter.json  plague_knight.json  skeleton.json
data/npcs/: aldwyn.json  brin.json  innkeeper.json
data/quests/: ruins_investigation.json  skeleton_purge.json
data/schemas/: class_template.schema.json  item_template.schema.json  npc_template.schema.json  passive_template.schema.json  quest_template.schema.json  room_template.schema.json  world_manifest.schema.json
data/world/: manifest.json
engine/: Cargo.toml
engine/.cargo/: config.toml
engine/chronos-core/: Cargo.toml
engine/chronos-core/src/: lib.rs  rng.rs
engine/chronos-core/src/components/: ability_cooldowns.rs  active_effects.rs  assembled_weapon.rs  blueprint.rs  combat_phase.rs  controllable.rs  enemy.rs  equipment.rs  experience.rs  game_time.rs  health.rs  identity.rs  inventory.rs  mod.rs  npc_dispositions.rs  party.rs  payload_slots.rs  poisoned.rs  position.rs  quest_log.rs  stats.rs  victory.rs  wallet.rs  world_flags.rs
engine/chronos-core/src/data/: game_state_dto.rs  mod.rs  repository.rs  schemas.rs
engine/chronos-core/src/events/: engine_event.rs  mod.rs
engine/chronos-core/src/journal/: event_log.rs  mod.rs
engine/chronos-core/src/layers/: mod.rs
engine/chronos-core/src/systems/: ability.rs  character.rs  character_sheet.rs  combat.rs  dialogue.rs  input_parsing.rs  interaction.rs  mod.rs  morale.rs  movement.rs  poison.rs  progression.rs  quest.rs  shop.rs
engine/chronos-core/tests/: blood_and_memory.rs  enemy_phases.rs  equip_display.rs  flee.rs  hollow_chain.rs  levelup.rs  loot.rs  morale.rs  party.rs  party_combat.rs  party_movement.rs  party_skills.rs  party_targeting.rs  passives.rs  rewind.rs  status_effects.rs
engine/chronos-server/: Cargo.toml
engine/chronos-server/src/: main.rs
engine/chronos-wasm/: Cargo.toml
engine/chronos-wasm/src/: lib.rs
scripts/: validate_worlds.py
ui/: .env.development.ws  index.html  package-lock.json  package.json  playwright.config.ts  stress-test.js  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: App.tsx  (+2 more)
(+455 files in other folders)
