[package]
name = "chronos-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = { version = "0.19", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# SQLite persistence is native-only; WASM delegates to JS for storage
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
