[package]
name = "chronos-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chronos-server"
path = "src/main.rs"

[dependencies]
chronos-core = { path = "../chronos-core" }
axum       = { version = "0.7", features = ["ws"] }
tokio      = { version = "1",   features = ["full"] }
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
