[package]
name = "chronos-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# wasm-opt miscompiles some bevy_ecs function-table code (manifests as a
# "table index out of bounds" trap on the rewind path). Disable it; the binary
# is small enough that the size win isn't worth the broken codegen.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
chronos-core = { path = "../chronos-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
# bevy_ecs → ahash pulls getrandom transitively; on wasm32-unknown-unknown it needs
# the browser-crypto backend enabled. Feature here + cfg flag in .cargo/config.toml.
getrandom = { version = "0.3", features = ["wasm_js"] }
# std's vendored dlmalloc (both 0.2.10 and 0.2.11) corrupts the heap on its wasm
# `memory.grow` path: once allocation outgrows the initial wasm pages, its chunk
# accounting breaks and it trips "assertion failed: psize <= size + max_overhead"
# (dlmalloc.rs:1207). Pinning a version only delayed the threshold. lol_alloc is a
# purpose-built wasm allocator with a correct growth path; AssumeSingleThreaded is
# sound here because wasm runs single-threaded with no shared-memory atomics.
lol_alloc = "0.4"
